target_sources(layout_scion PRIVATE
    ASCIICType.swift
    GenericTimeMixin.swift
    HashMap.swift
    HashSet.swift
    IteratorRange.swift
    ListSet.swift
    MathExtras.swift
    MemoryPressureHandler.swift
    MonotonicTime.swift
    ObjectIdentifierHashSet.swift
    OptionalComparison.swift
    PriorityQueue.swift
    SaturatedArithmetic.swift
    SetForScope.swift
    SystemTracing.swift
    WeakHashSet.swift
    WeakNullableRef.swift
)
add_subdirectory(text)
add_subdirectory(unicode)
