target_sources(layout_scion PRIVATE
    ASCIICType.swift
    GenericTimeMixin.swift
    HashMap.swift
    HashSet.swift
    IteratorRange.swift
    ListHashSet.swift
    MathExtras.swift
    MemoryPressureHandler.swift
    MonotonicTime.swift
    OptionalComparison.swift
    PriorityQueue.swift
    Ref.swift
    SaturatedArithmetic.swift
    SetForScope.swift
    SystemTracing.swift
    WeakHashMap.swift
    WeakHashSet.swift
    WeakListHashSet.swift
    WeakRef.swift
    WeakPtr.swift
)
add_subdirectory(text)
add_subdirectory(unicode)
