target_sources(layout_scion PRIVATE
    HTMLAnchorElement.swift
    HTMLBodyElement.swift
    HTMLButtonElement.swift
    HTMLCanvasElement.swift
    HTMLDivElement.swift
    HTMLElement.swift
    HTMLFormControlElement.swift
    HTMLFrameOwnerElement.swift
    HTMLHtmlElement.swift
    HTMLImageElement.swift
    HTMLInputElement.swift
    HTMLLegendElement.swift
    HTMLOptionElement.swift
    HTMLSelectElement.swift
    HTMLSlotElement.swift
    HTMLTableElement.swift
    HTMLTextAreaElement.swift
    HTMLTextFormControlElement.swift
)
add_subdirectory(canvas)
add_subdirectory(shadow)
