target_sources(layout_scion PRIVATE
    Chrome.swift
    ChromeClient.swift
    FocusController.swift
    Frame.swift
    FrameView.swift
    LocalFrame.swift
    LocalFrameView.swift
    LocalFrameViewLayoutContext.swift
    Page.swift
    SecurityOrigin.swift
    SecurityOriginData.swift
)
add_subdirectory(scrolling)