target_sources(layout_scion PRIVATE
    Chrome.swift
    ChromeClient.swift
    EventHandler.swift
    FocusController.swift
    Frame.swift
    FrameIdentifier.swift
    FrameView.swift
    LocalFrame.swift
    LocalFrameView.swift
    LocalFrameViewLayoutContext.swift
    Page.swift
    PageOverlayController.swift
    SecurityOrigin.swift
    SecurityOriginData.swift
)
add_subdirectory(scrolling)