target_sources(layout_scion PRIVATE
    CaretAnimator.swift
    FloatConversion.swift
    LayoutUnit.swift
    Length.swift
    LengthBox.swift
    LengthFunctions.swift
    LengthPoint.swift
    LengthSize.swift
    RectEdges.swift
    ScrollableArea.swift
    Scrollbar.swift
    ScrollTypes.swift
    ScrollView.swift
    Widget.swift
)
add_subdirectory(graphics)
add_subdirectory(text)
