target_sources(layout_scion PRIVATE
    EllipsisBoxPainter.swift
    EventRegion.swift
    FloatingObjects.swift
    GlyphDisplayListCache.swift
    HitTestLocation.swift
    HitTestRequest.swift
    HitTestResult.swift
    InlineBoxPainter.swift
    InlineWalker.swift
    LayerFragment.swift
    LegacyInlineBox.swift
    LegacyInlineTextBox.swift
    LegacyLineLayout.swift
    MarkedText.swift
    OverlapTestRequestClient.swift
    PaintFrequencyTracker.swift
    PaintInfo.swift
    PaintPhase.swift
    PathOperation.swift
    ReferencedSVGResources.swift
    AccessibilityRegionContext.swift
    BackgroundPainter.swift
    BorderEdge.swift
    BorderPainter.swift
    BorderShape.swift
    BreakLines.swift
    ClipRect.swift
    RenderBlock.swift
    RenderBlockFlow.swift
    RenderBox.swift
    RenderBoxModelObject.swift
    RenderButton.swift
    RenderCombineText.swift
    RegionContext.swift
    RenderDeprecatedFlexibleBox.swift
    RenderLayerFilters.swift
    RenderElement.swift
    RenderFlexibleBox.swift
    RenderFragmentContainer.swift
    RenderFragmentContainerSet.swift
    RenderFragmentedFlow.swift
    RenderGrid.swift
    RenderHighlight.swift
    RenderHTMLCanvas.swift
    RenderImage.swift
    RenderInline.swift
    RenderLayer.swift
    RenderLayerBacking.swift
    RenderLayerModelObject.swift
    RenderLayerScrollableArea.swift
    RenderLayoutState.swift
    RenderLineBoxList.swift
    RenderLineBreak.swift
    RenderListBox.swift
    RenderListItem.swift
    RenderListMarker.swift
    RenderMultiColumnFlow.swift
    RenderMultiColumnSet.swift
    RenderObject.swift
    RenderObjectEnums.swift
    RenderReplaced.swift
    RenderReplica.swift
    RenderSelection.swift
    RenderSlider.swift
    RenderTable.swift
    RenderTableCell.swift
    RenderTableRow.swift
    RenderText.swift
    RenderTheme.swift
    RenderView.swift
    RenderTextControl.swift
    RenderTextControlMultiLine.swift
    StyledMarkedText.swift
    TextBoxPainter.swift
    TextBoxSelectableRange.swift
    TextDecorationPainter.swift
    TextPainter.swift
    TextPaintStyle.swift
)
add_subdirectory(algorithms)
add_subdirectory(mathml)
add_subdirectory(shapes)
add_subdirectory(style)
add_subdirectory(svg)
