target_sources(layout_scion PRIVATE
    EllipsisBoxPainter.swift
    EventRegion.swift
    FloatingObjects.swift
    GlyphDisplayListCache.swift
    Grid.swift
    HitTestLocation.swift
    HitTestRequest.swift
    HitTestResult.swift
    InlineBoxPainter.swift
    InlineWalker.swift
    LayerAncestorClippingStack.swift
    LayerFragment.swift
    LegacyInlineBox.swift
    LegacyInlineFlowBox.swift
    LegacyInlineIterator.swift
    LegacyInlineTextBox.swift
    LegacyLineLayout.swift
    LegacyRootInlineBox.swift
    MarkedText.swift
    OverlapTestRequestClient.swift
    PaintFrequencyTracker.swift
    PaintInfo.swift
    PaintPhase.swift
    PathOperation.swift
    ReferencedSVGResources.swift
    AccessibilityRegionContext.swift
    BackgroundPainter.swift
    BidiRun.swift
    BorderEdge.swift
    BorderPainter.swift
    BorderShape.swift
    BreakLines.swift
    ClipRect.swift
    CreateRenderer.swift
    CSSFilter.swift
    RenderAncestorIterator.swift
    RenderBlock.swift
    RenderBlockFlow.swift
    RenderBox.swift
    RenderBoxModelObject.swift
    RenderButton.swift
    RenderChildIterator.swift
    RenderCombineText.swift
    RegionContext.swift
    RenderDeprecatedFlexibleBox.swift
    RenderDescendantIterator.swift
    RenderLayerFilters.swift
    RenderElement.swift
    RenderEmbeddedObject.swift
    RenderFlexibleBox.swift
    RenderFragmentContainer.swift
    RenderFragmentContainerSet.swift
    RenderFragmentedFlow.swift
    RenderGrid.swift
    RenderHighlight.swift
    RenderHTMLCanvas.swift
    RenderImage.swift
    RenderInline.swift
    RenderIterator.swift
    RenderLayer.swift
    RenderLayerBacking.swift
    RenderLayerCompositor.swift
    RenderLayerModelObject.swift
    RenderLayerScrollableArea.swift
    RenderLayoutState.swift
    RenderLineBoxList.swift
    RenderLineBreak.swift
    RenderListBox.swift
    RenderListItem.swift
    RenderListMarker.swift
    RenderMedia.swift
    RenderMenuList.swift
    RenderMeter.swift
    RenderMultiColumnFlow.swift
    RenderMultiColumnSet.swift
    RenderMultiColumnSpannerPlaceholder.swift
    RenderObject.swift
    RenderObjectEnums.swift
    RenderOverflow.swift
    RenderProgress.swift
    RenderQuote.swift
    RenderReplaced.swift
    RenderReplica.swift
    RenderSelection.swift
    RenderSlider.swift
    RenderTable.swift
    RenderTableCaption.swift
    RenderTableCell.swift
    RenderTableCol.swift
    RenderTableRow.swift
    RenderTableSection.swift
    RenderText.swift
    RenderTheme.swift
    RenderTreeMutationDisallowedScope.swift
    RenderVideo.swift
    RenderView.swift
    RenderViewTransitionCapture.swift
    RenderWidget.swift
    RenderTextControl.swift
    RenderTextControlMultiLine.swift
    RenderTextControlSingleLine.swift
    RenderTextFragment.swift
    StyledMarkedText.swift
    TextBoxPainter.swift
    TextBoxSelectableRange.swift
    TextDecorationPainter.swift
    TextPainter.swift
    TextPaintStyle.swift
)
add_subdirectory(algorithms)
add_subdirectory(line)
add_subdirectory(mathml)
add_subdirectory(shapes)
add_subdirectory(style)
add_subdirectory(svg)
add_subdirectory(updating)
