target_sources(layout_scion PRIVATE
    SVGElement.swift
    SVGFilterElement.swift
    SVGFitToViewBox.swift
    SVGGeometryElement.swift
    SVGGraphicsElement.swift
    SVGImageElement.swift
    SVGLengthContext.swift
    SVGLengthValue.swift
    SVGPreserveAspectRatioValue.swift
    SVGRectElement.swift
    SVGSVGElement.swift
    SVGTextContentElement.swift
    SVGTextElement.swift
    SVGTextPositioningElement.swift
)
add_subdirectory(graphics)
