target_sources(layout_scion PRIVATE
    SVGClipPathElement.swift
    SVGElement.swift
    SVGFilterElement.swift
    SVGFitToViewBox.swift
    SVGGeometryElement.swift
    SVGGraphicsElement.swift
    SVGImageElement.swift
    SVGLengthContext.swift
    SVGLengthValue.swift
    SVGMarkerTypes.swift
    SVGPreserveAspectRatioValue.swift
    SVGRectElement.swift
    SVGSVGElement.swift
    SVGTextContentElement.swift
    SVGTextElement.swift
    SVGTextPositioningElement.swift
    SVGUnitTypes.swift
)
add_subdirectory(graphics)
