target_sources(layout_scion PRIVATE
    SVGClipPathElement.swift
    SVGElement.swift
    SVGFilterElement.swift
    SVGFitToViewBox.swift
    SVGForeignObjectElement.swift
    SVGGeometryElement.swift
    SVGGradientElement.swift
    SVGGraphicsElement.swift
    SVGImageElement.swift
    SVGLengthContext.swift
    SVGLengthValue.swift
    SVGMarkerElement.swift
    SVGMarkerTypes.swift
    SVGMaskElement.swift
    SVGPreserveAspectRatioValue.swift
    SVGRectElement.swift
    SVGSVGElement.swift
    SVGTextContentElement.swift
    SVGTextElement.swift
    SVGTextPathElement.swift
    SVGTextPositioningElement.swift
    SVGUnitTypes.swift
    SVGUseElement.swift
)
add_subdirectory(graphics)
