target_sources(layout_scion PRIVATE
    BitmapImage.swift
    Color.swift
    ColorBlending.swift
    ColorLuminance.swift
    ColorMatrix.swift
    ColorTypes.swift
    DashArray.swift
    DecodingOptions.swift
    DestinationColorSpace.swift
    FloatPoint.swift
    FloatPoint3D.swift
    FloatQuad.swift
    FloatRect.swift
    FloatRoundedRect.swift
    FloatSize.swift
    Font.swift
    FontBaseline.swift
    FontCascade.swift
    FontCascadeDescription.swift
    FontDescription.swift
    FontMetrics.swift
    FontSelector.swift
    GeometryUtilities.swift
    Glyph.swift
    GlyphPage.swift
    GraphicsContext.swift
    GraphicsContextState.swift
    GraphicsContextStateSaver.swift
    GraphicsContextSwitcher.swift
    GraphicsLayer.swift
    GraphicsLayerClient.swift
    GraphicsLayerFactory.swift
    GraphicsStyle.swift
    GraphicsTypes.swift
    Image.swift
    ImageBuffer.swift
    ImageObserver.swift
    ImageOrientation.swift
    ImagePaintingOptions.swift
    ImageTypes.swift
    IntPoint.swift
    IntRect.swift
    IntSize.swift
    Latin1TextIterator.swift
    LayoutPoint.swift
    LayoutRect.swift
    LayoutSize.swift
    Path.swift
    PathSegmentData.swift
    PathUtilities.swift
    RenderingResource.swift
    RenderingResourceIdentifier.swift
    RotationDirection.swift
    RoundedRect.swift
    SurrogatePairAwareTextIterator.swift
    TabSize.swift
    TextIterator.swift
    TextRun.swift
    TiledBacking.swift
    WindRule.swift
)

add_subdirectory(controls)
add_subdirectory(displaylists)
add_subdirectory(filters)
add_subdirectory(transforms)
