target_sources(layout_scion PRIVATE
    RenderSVGBlock.swift
    RenderSVGContainer.swift
    RenderSVGHiddenContainer.swift
    RenderSVGImage.swift
    RenderSVGInline.swift
    RenderSVGInlineText.swift
    RenderSVGModelObject.swift
    RenderSVGPath.swift
    RenderSVGResourceClipper.swift
    RenderSVGResourceContainer.swift
    RenderSVGResourceMarker.swift
    RenderSVGForeignObject.swift
    RenderSVGGradientStop.swift
    RenderSVGRoot.swift
    RenderSVGShape.swift
    RenderSVGText.swift
    RenderSVGTransformableContainer.swift
    RenderSVGViewportContainer.swift
    SVGBoundingBoxComputation.swift
    SVGContainerLayout.swift
    SVGLayerTransformComputation.swift
    SVGLayerTransformUpdater.swift
    SVGRenderSupport.swift
    SVGTextLayoutAttributes.swift
)
add_subdirectory(legacy)
