target_sources(layout_scion PRIVATE
    RenderSVGBlock.swift
    RenderSVGContainer.swift
    RenderSVGEllipse.swift
    RenderSVGHiddenContainer.swift
    RenderSVGImage.swift
    RenderSVGInline.swift
    RenderSVGInlineText.swift
    RenderSVGModelObject.swift
    RenderSVGPath.swift
    RenderSVGRect.swift
    RenderSVGResourceClipper.swift
    RenderSVGResourceContainer.swift
    RenderSVGResourceFilter.swift
    RenderSVGResourceGradient.swift
    RenderSVGResourceLinearGradient.swift
    RenderSVGResourceMarker.swift
    RenderSVGResourceMasker.swift
    RenderSVGResourcePaintServer.swift
    RenderSVGResourceRadialGradient.swift
    RenderSVGForeignObject.swift
    RenderSVGGradientStop.swift
    RenderSVGRoot.swift
    RenderSVGShape.swift
    RenderSVGText.swift
    RenderSVGTransformableContainer.swift
    RenderSVGViewportContainer.swift
    SVGBoundingBoxComputation.swift
    SVGContainerLayout.swift
    SVGLayerTransformComputation.swift
    SVGLayerTransformUpdater.swift
    SVGRenderSupport.swift
    SVGTextLayoutAttributes.swift
    SVGTextLayoutAttributesBuilder.swift
    SVGTextMetricsBuilder.swift
)
add_subdirectory(legacy)
