target_sources(layout_scion PRIVATE
    RenderSVGBlock.swift
    RenderSVGContainer.swift
    RenderSVGEllipse.swift
    RenderSVGHiddenContainer.swift
    RenderSVGImage.swift
    RenderSVGInline.swift
    RenderSVGInlineText.swift
    RenderSVGModelObject.swift
    RenderSVGPath.swift
    RenderSVGRect.swift
    RenderSVGResourceClipper.swift
    RenderSVGResourceContainer.swift
    RenderSVGResourceFilter.swift
    RenderSVGResourceGradient.swift
    RenderSVGResourceLinearGradient.swift
    RenderSVGResourceMarker.swift
    RenderSVGResourceMasker.swift
    RenderSVGResourcePaintServer.swift
    RenderSVGResourceRadialGradient.swift
    RenderSVGForeignObject.swift
    RenderSVGGradientStop.swift
    RenderSVGRoot.swift
    RenderSVGShape.swift
    RenderSVGText.swift
    RenderSVGTextPath.swift
    RenderSVGTransformableContainer.swift
    RenderSVGViewportContainer.swift
    SVGBoundingBoxComputation.swift
    SVGContainerLayout.swift
    SVGInlineFlowBox.swift
    SVGInlineTextBox.swift
    SVGLayerTransformComputation.swift
    SVGLayerTransformUpdater.swift
    SVGMarkerData.swift
    SVGPaintServerHandling.swift
    SVGPathData.swift
    SVGRenderingContext.swift
    SVGRenderSupport.swift
    SVGRootInlineBox.swift
    SVGSubpathData.swift
    SVGTextBoxPainter.swift
    SVGTextChunk.swift
    SVGTextChunkBuilder.swift
    SVGTextFragment.swift
    SVGTextLayoutAttributes.swift
    SVGTextLayoutAttributesBuilder.swift
    SVGTextLayoutEngine.swift
    SVGTextLayoutEngineBaseline.swift
    SVGTextLayoutEngineSpacing.swift
    SVGTextMetrics.swift
    SVGTextMetricsBuilder.swift
    SVGVisitedRendererTracking.swift
)
add_subdirectory(legacy)
